--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,12 @@
 //Bulma Vue Modules
 @import 'node_modules/buefy/src/scss/buefy';
 
+//Custom SASS Pages by Zoran
+@import 'overrides';
+@import 'helpers';
+@import 'styles';
+@import 'manage';
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
