--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18756,7 +18756,6 @@ a.is-muted:hover {
   height: 100vh;
   width: 200px;
   background-color: white;
-  overflow-y: scroll;
 }
 
 .managment-area {
@@ -18768,6 +18767,18 @@ a.is-muted:hover {
 
 .flex-container {
   margin: 10px 25px;
+}
+
+.submenu {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.menu-list li ul {
+  margin: 0;
+  margin-bottom: 0;
 }
 
 .navbar-laravel {
