--- a/resources/sass/manage.scss
+++ b/resources/sass/manage.scss
@@ -3,7 +3,7 @@
 	height: 100vh;
 	width: 200px;
 	background-color: white;
-	overflow-y: scroll;
+	
 }
 
 .managment-area {
@@ -15,4 +15,15 @@
 
 .flex-container {
 	margin: 10px 25px;
+}
+
+.submenu {
+	max-height: 0;
+	overflow: hidden;
+	transition: all 0.2s ease-in-out;
+}
+
+.menu-list li ul {
+	margin: 0;
+	margin-bottom: 0;
 }
