--- a/resources/sass/overrides.scss
+++ b/resources/sass/overrides.scss
@@ -1,59 +1,26 @@
-.dropdown {
-	position: relative;
-	font-size: 1rem;
+/* ========================================
+   ============ Text Overrides ===========
+   ======================================== */
 
-
-
-		.dropdown-menu {
-		  display: none;
-	      position: absolute;
-	      left: 0;
-	      top: 102%;
-	      z-index: 1000;
-	      background-color: white;
-	      min-width: 200px;
-	      text-align: left;
-	      box-shadow: 0 0 1px rgba(57,70,78,.15), 0 20px 55px -8px rgba(57,70,78,.25);
-	      
-	      li {
-	        &.separator {
-	         border-top: 1px solid #ccc;
-	         margin: 5px 0;
-	        }
-	        &>a {
-	        margin: 5px 0;
-	        padding: 5px 0 5px 15px;
-	        display: block;
-	        color: grey;
-	        &:hover {
-	          background-color: whitesmoke;
-	          }
-	        }
-	      }
-
-
-		}
-
-		&.is-aligned-right .dropdown-menu {
-	    	right: 0;
-	    	left: auto;
-	    }
-
-	    &.is-open .dropdown-menu {
-	       display: block;
-	    }
+.is-muted {
+  color: $grey-light !important;
 }
 
-button.navbar-item {
-	background-color: white;
-	border: none;
-
+a.is-muted:hover{
+  color: $grey !important;
 }
 
-.navbar {
-	height: 4.5rem;
+.nav-item img {
+  max-height: 2.8rem;
 }
 
-.navbar-item img {
-	max-height: 2.8rem;
+.nav {
+  height: 4.5rem;
+}
+.navbar-brand .brand-item {
+  margin-right: 5px;
+  margin-left: 10px;
+  @include desktop {
+    margin-right: 15px;
+  }
 }
